2008-06-11  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins.mdp, Makefile.am,
	  Mono.Addins.Description/AddinDescription.cs,
	  Mono.Addins.Description/AddinFlags.cs: Added flags property to
	  AddinDescription.

2008-06-11  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins.Database/Util.cs: Make sure GetStringHashCode never
	  throws an arithmentic overflow exception. Patch by Lauris
	  Bukšis-Haberkorns.

2008-06-11  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins.mdp: Updated.
	* Mono.Addins/ExtensionContext.cs: For consistency, the ExtensionEvent
	  event must be fired even for extension points which have not yet
	  been loaded.

2008-04-07  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins.csproj: Added missing files.
	* Mono.Addins/ExtensionNode.cs: When subscribing the extension changed
	  event, fire it for existing nodes, but only fire for the new
	  handler.

2008-02-25  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins/TypeExtensionNode.cs: Added property for getting the type
	  of an extension node. Based on a patch by Brad Taylor.

2008-02-18  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins/AddinRegistry.cs: Allow getting the startup path of the
	  registry.
	* Mono.Addins.Description/AddinDescription.cs: Improve error message.
	* Mono.Addins.Database/AddinDatabase.cs: Use the startup patch provided by
	  the registry, not the global one.

2008-02-15  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins/AddinRegistry.cs: Minor fixes.
	* Mono.Addins/AddinLocalizer.cs: Ouch, format arguments of GetString should
	  have been objects, not strings.
	* Mono.Addins.Description/NodeTypeAttribute.cs,
	  Mono.Addins.Description/ExtensionNodeType.cs,
	  Mono.Addins.Description/ExtensionPoint.cs,
	  Mono.Addins.Description/ConditionTypeDescription.cs,
	  Mono.Addins.Description/ExtensionNodeSet.cs: Implemented CopyFrom.
	* Mono.Addins.Description/AddinDescription.cs: Set global domain to
	  manifests read from xml files.